[25] JEP 512 - Compact Source Files (#4180)
* Make the feature non-preview
* Adjust failing tests